--- a/package.json
+++ b/package.json
@@ -29,17 +29,16 @@
     "@types/react-redux": "^7.1.11",
     "@types/react-router-dom": "^5.1.5",
     "@types/styled-components": "^5.1.3",
+    "array-move": "^3.0.1",
     "axios": "^0.21.0",
     "date-fns": "^2.16.1",
     "dayjs": "^1.9.1",
     "escape-html": "^1.0.3",
-    "husky": "^4.2.5",
     "image-extensions": "^1.1.0",
     "is-hotkey": "^0.2.0",
     "is-url": "^1.2.4",
     "lint-staged": "^10.3.0",
     "node-sass": "^4.14.1",
-    "prettier": "^2.1.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
@@ -49,6 +48,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-slick": "^0.27.11",
+    "react-sortable-hoc": "^1.11.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "slate": "^0.59.0",
@@ -80,6 +80,8 @@
   },
   "devDependencies": {
     "@material-ui/pickers": "^3.2.10",
+    "husky": "^4.2.5",
+    "prettier": "^2.1.1",
     "redux-devtools-extension": "^2.13.8"
   }
 }
