--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "journal-of-curious-things",
   "version": "0.1.0",
   "private": true,
+  "entryPoint": "src/index.tsx",
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged"
@@ -14,21 +15,9 @@
   },
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
-    "@date-io/luxon": "^2.10.6",
     "@emotion/css": "^11.1.3",
-    "@emotion/react": "^11.1.4",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "@types/jest": "^24.0.0",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.49",
-    "@types/react-dom": "^16.9.8",
-    "@types/react-redux": "^7.1.11",
-    "@types/react-router-dom": "^5.1.5",
-    "@types/styled-components": "^5.1.3",
     "array-move": "^3.0.1",
     "axios": "^0.21.0",
     "date-fns": "^2.16.1",
@@ -37,8 +26,6 @@
     "image-extensions": "^1.1.0",
     "is-hotkey": "^0.2.0",
     "is-url": "^1.2.4",
-    "lint-staged": "^10.3.0",
-    "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
@@ -54,8 +41,7 @@
     "slate": "^0.59.0",
     "slate-history": "^0.59.0",
     "slate-react": "^0.59.0",
-    "styled-components": "^5.1.1",
-    "typescript": "~3.7.2"
+    "styled-components": "^5.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -80,8 +66,15 @@
   },
   "devDependencies": {
     "@material-ui/pickers": "^3.2.10",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@types/react": "^16.9.49",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-redux": "^7.1.11",
+    "@types/react-router-dom": "^5.1.5",
+    "@types/styled-components": "^5.1.3",
     "husky": "^4.2.5",
-    "prettier": "^2.1.1",
+    "lint-staged": "^10.3.0",
+    "typescript": "~3.7.2",
     "redux-devtools-extension": "^2.13.8"
   }
 }
