--- a/package.json
+++ b/package.json
@@ -3,45 +3,36 @@
   "version": "0.1.0",
   "private": true,
   "entryPoint": "src/index.tsx",
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
-      "prettier --write"
-    ]
-  },
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
-    "@emotion/css": "^11.1.3",
-    "@material-ui/core": "^4.11.0",
+    "@emotion/css": "^11.5.0",
+    "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.9.1",
+    "@paypal/react-paypal-js": "^7.5.0",
     "array-move": "^3.0.1",
-    "axios": "^0.21.0",
-    "date-fns": "^2.16.1",
-    "dayjs": "^1.9.1",
+    "axios": "^0.21.4",
+    "date-fns": "^2.26.0",
+    "dayjs": "^1.10.7",
     "escape-html": "^1.0.3",
     "image-extensions": "^1.1.0",
     "is-hotkey": "^0.2.0",
     "is-url": "^1.2.4",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "react-helmet": "^6.1.0",
     "react-loader-spinner": "^3.1.14",
     "react-perfect-scrollbar": "^1.5.8",
-    "react-redux": "^7.2.2",
-    "react-router-dom": "^5.2.0",
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "3.4.3",
-    "react-slick": "^0.27.11",
+    "react-slick": "^0.27.14",
     "react-sortable-hoc": "^1.11.0",
-    "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0",
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1",
     "slate": "^0.59.0",
     "slate-history": "^0.59.0",
     "slate-react": "^0.59.0",
-    "styled-components": "^5.1.1"
+    "styled-components": "^5.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -50,7 +41,10 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
     "production": [
@@ -65,16 +59,17 @@
     ]
   },
   "devDependencies": {
-    "@material-ui/pickers": "^3.2.10",
+    "@material-ui/pickers": "^3.3.10",
     "@testing-library/jest-dom": "^4.2.4",
-    "@types/react": "^16.9.49",
-    "@types/react-dom": "^16.9.8",
-    "@types/react-redux": "^7.1.11",
-    "@types/react-router-dom": "^5.1.5",
-    "@types/styled-components": "^5.1.3",
-    "husky": "^4.2.5",
-    "lint-staged": "^10.3.0",
-    "typescript": "~3.7.2",
-    "redux-devtools-extension": "^2.13.8"
+    "@types/node": "^16.11.11",
+    "@types/react": "^16.14.21",
+    "@types/react-dom": "^16.9.14",
+    "@types/react-redux": "^7.1.20",
+    "@types/react-router-dom": "^5.3.2",
+    "@types/styled-components": "^5.1.15",
+    "husky": "^4.3.8",
+    "lint-staged": "^10.5.4",
+    "redux-devtools-extension": "^2.13.9",
+    "typescript": "^4.5.2"
   }
 }
